Fix whitespace in event template

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://www.themeboy.com/rookie/
 Author: ThemeBoy
 Author URI: https://www.themeboy.com
 Description: Rookie is a fully responsive theme made for sports organisations looking to use the SportsPress plugin. Once you’ve installed the theme and SportsPress, you'll be able to select a preset for your sport and demo content to help you get started on building your sports website.
-Version: 1.2
+Version: 1.2.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: rookie
@@ -717,6 +717,7 @@ a:hover .page-title:hover {
 .sp-template-details dl {
 	background: #f4f4f4;
 	border: 1px solid #e0e0e0;
+	margin-bottom: 20px;
 }
 
 .sp-template-player-gallery .gallery-caption {
@@ -832,6 +833,7 @@ a:hover .page-title:hover {
 
 	.content-area-full-width,
 	.widecolumn {
+		width: 100%;
 		border-right: 0;
 	}
 
